light silly edits

--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <h2>I am scared....</h2>
-    <h3>But that's ok</h3>
+    <h1>Winter's Wintabulous MSC2006 Site</h1>
+    <h2>Read this site to see my grand schemes and plots</h2>
+    <h3>you are NOT ready for this</h3>
     <p>
-      How is your day going today? I started with a long bus ride, but not as
-      long as usual. That was a welcome relief. I don't know why clown school is
-      so remote. All I know is that when they say "send in the clowns", I must
-      answer the summons
+      This is my clown landing page. I like to call it "Clown City", but the clowns are not a fan
     </p>
     <img src="images/clown.jpg" alt="A clown looking beleaguered at a desk" />
     <br>
