--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
+    <header>
+    <nav>
+      <div class="logo">
+        <h1>My DevDiaries</h1>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/lab2.html">Lab 2</a></li>
+        <li><a href="pages/uncertainties.html">Uncertainties</a></li>
+      </ul>
+    </nav>
+  </header>
     <h1>Winter's Wintabulous MSC2006 Site</h1>
     <h2>Read this site to see my grand schemes and plots</h2>
     <h3>you are NOT ready for this</h3>
