responsive design + header changes

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <h1>My DevDiaries</h1>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html"class="active">Home</a></li>
         <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/lab2.html">Lab 2</a></li>
         <li><a href="pages/uncertainties.html">Uncertainties</a></li>
       </ul>
     </nav>
-  </header>
-    <h1>Winter's Wintabulous MSC2006 Site</h1>
-    <h2>Read this site to see my grand schemes and plots</h2>
-    <h3>you are NOT ready for this</h3>
+  </header> <br>
+    <h1>Winter's Wintabulous MSC2006 Site</h1> <br>
+    <h2>Read this site to see my grand schemes and plots</h2> <br>
+    <h3>you are NOT ready for this</h3><br>
     <p>
       This is my clown landing page. I like to call it "Clown City", but the clowns are not a fan
     </p>
