--- a/pages/about.html
+++ b/pages/about.html
@@ -20,13 +20,14 @@
     </div>
     <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html"class="active">About</a></li>
         <li><a href="lab2.html">Lab 2</a></li>
         <li><a href="uncertainties.html">Uncertainties</a></li>
     </ul>
     </nav>
     </header>
-    <p> Cirque d'Hiver est un siteweb dédié à tout ce qui est fantaisiste. </p>
+    <br>
+    <p> Cirque d'Hiver est un siteweb dédié à tout ce qui est fantaisiste. </p> <br>
         <img src="../images/cirque d'été.jpg" alt="A vintage french circus poster advertising Cirque d'été" />
         <img src="../images/cirque d'hiver.jpg" alt="A vintage french circus poster advertising Cirque d'Hiver"/>
 </body>
