--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -21,7 +21,7 @@
     <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-                        <li><a href="lab2.html">Lab 2</a></li>
+        <li><a href="lab2.html"class="active">Lab 2</a></li>
         <li><a href="uncertainties.html">Uncertainties</a></li>
     </ul>
     </nav>
