--- a/pages/uncertainties.html
+++ b/pages/uncertainties.html
@@ -22,7 +22,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="lab2.html">Lab 2</a></li>
-        <li><a href="uncertainties.html">Uncertainties</a></li>
+        <li><a href="uncertainties.html"class="active">Uncertainties</a></li>
     </ul>
     </nav>
     </header>
