footer... my foot!

--- a/pages/uncertainties.html
+++ b/pages/uncertainties.html
@@ -26,6 +26,8 @@
     </ul>
     </nav>
     </header>
+
+    <main>
     <p>I am going to use this page to store the things I am not certain of and the questions I have for Shay.
     <ul>
         <li>How do I apply the same font to everything in the site across pages without just copy pasting the code for the font into the header?</li>
@@ -33,5 +35,26 @@
 <li>How do I resize an image?</li>    
 </ul>
     </p>
+    </main>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>My DevDiaries</h3>
+        <p>Documenting my journey in web development</p>
+      </div>
+      
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p><a href="kraemerwinter@gmail.com">kraemerwinter@gmail.com</a></p>
+        <p><a href="https://winterkraemer.cargo.site/">winter.kraemer.cargo.site</a></p>
+      </div>
+    </div>
+    
+    <div class="footer-bottom">
+      <p>&copy; 2026 My DevDiaries. All rights reserved.</p>
+    </div>
+  </footer>
+
 </body>
 </html>
