--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header>
     <nav>
       <div class="logo">
-        <h1>My DevDiaries</h1>
+        <a href="index.html">
+        <img src="images/clown logo.svg" alt="clogo"/></a>
       </div>
       <ul class="nav-links">
         <li><a href="index.html"class="active">Home</a></li>
@@ -37,7 +38,7 @@
     <img src="images/clown.jpg" alt="A clown looking beleaguered at a desk" />
     <br>
     <a href="https://www.justforclowns.com/">Help for Clowns</a>
-    <div class="card">Freak city!</div>
+    <!-- <div class="card">Freak city!</div> -->
   </main>
     
   <footer>
