lots of big changes!

--- a/pages/uncertainties.html
+++ b/pages/uncertainties.html
@@ -4,11 +4,9 @@
     <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-    href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet"
     />
     <title>Uncertainties</title>
 </head>
@@ -17,10 +15,9 @@
     <nav>
     <div class="logo">
         <a href="../index.html">
-        <img src="../images/clown logo.svg" alt="clogo"/></a>
+        <img src="../images/clown logo v3.svg" alt="Home button appears as a small cartoon clown head"/></a>
     </div>
     <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="lab2.html">Lab 2</a></li>
         <li><a href="uncertainties.html"class="active">Uncertainties</a></li>
