--- a/pages/about.html
+++ b/pages/about.html
@@ -4,11 +4,9 @@
     <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-        rel="stylesheet"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet"
     />
     <title>About</title>
 </head>
@@ -17,10 +15,9 @@
     <nav>
     <div class="logo">
         <a href="../index.html">
-        <img src="../images/clown logo.svg" alt="clogo"/></a>
+        <img src="../images/clown logo v3.svg" alt="Home button appears as a small cartoon clown head"/></a>
     </div>
     <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
         <li><a href="about.html"class="active">About</a></li>
         <li><a href="lab2.html">Lab 2</a></li>
         <li><a href="uncertainties.html">Uncertainties</a></li>
@@ -30,8 +27,8 @@
     
     <main>
     <p> Cirque d'Hiver est un siteweb dédié à tout ce qui est fantaisiste. </p> <br>
-        <img src="../images/cirque d'été.jpg" alt="A vintage french circus poster advertising Cirque d'été" />
-        <img src="../images/cirque d'hiver.jpg" alt="A vintage french circus poster advertising Cirque d'Hiver"/>
+        <img src="../images/cirque d'ete.jpg" alt="A vintage french circus poster advertising Cirque d'été, the Summer Circus" />
+        <img src="../images/cirque d'hiver.jpg" alt="A vintage french circus poster advertising Cirque d'Hiver, the Winter Circus"/>
     </main>
     <br>
     
