Added gifs + styling

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </div>
       <ul class="nav-links">
         <li><a href="pages/about.html">About</a></li>
-        <li><a href="pages/lab2.html">Lab 2</a></li>
-        <li><a href="pages/uncertainties.html">Uncertainties</a></li>
+        <li><a href="pages/labs.html">Labs</a></li>
+        <li><a href="pages/tech_experiments.html">Tech Experiments</a></li>
       </ul>
     </nav>
   </header>
@@ -29,7 +29,6 @@
     <section class="hero">
     <h1>Winter's Wintabulous Web Dev</h1>
     <p>Documenting my circus journey, one clown at a time.</p>
-    <p style="background-image: url(images/vintage_paper.jpeg);"></p>
   </section>
 
   <section class="gallery">
