--- a/pages/about.html
+++ b/pages/about.html
@@ -19,8 +19,8 @@
     </div>
     <ul class="nav-links">
         <li><a href="about.html"class="active">About</a></li>
-        <li><a href="lab2.html">Lab 2</a></li>
-        <li><a href="uncertainties.html">Uncertainties</a></li>
+        <li><a href="labs.html">Labs</a></li>
+        <li><a href="tech_experiments.html">Tech Experiments</a></li>
     </ul>
     </nav>
     </header>
