--- a/pages/tech_experiments.html
+++ b/pages/tech_experiments.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet"
     />
-    <title>Uncertainties</title>
+    <title>Tech Experiments</title>
 </head>
 <body>
     <header>
@@ -19,18 +19,16 @@
     </div>
     <ul class="nav-links">
         <li><a href="about.html">About</a></li>
-        <li><a href="lab2.html">Lab 2</a></li>
-        <li><a href="uncertainties.html"class="active">Uncertainties</a></li>
+        <li><a href="labs.html">Labs</a></li>
+        <li><a href="uncertainties.html"class="active">Tech Experiments</a></li>
     </ul>
     </nav>
     </header>
 
     <main>
-    <p>I am going to use this page to store the things I am not certain of and the questions I have for Shay.
-    <ul>
-        <li>How do I apply the same font to everything in the site across pages without just copy pasting the code for the font into the header?</li>  
-</ul>
-    </p>
+    <div class="clown-gif">
+        <img src="../images/transparent_clown.GIF" alt="">
+    </div>
     </main>
 
 <footer>
