little changes to lab page

--- a/pages/labs.html
+++ b/pages/labs.html
@@ -27,20 +27,21 @@
 
     <main>
 <section class="lab-header-gif">
-  <img src="../images/lab_1_tent.gif" alt="Lab 1">
+  <img src="../images/lab_1_tent_v2.gif" alt="Lab 1">
 </section>
 
 <section class="learning-section">
   <h3>Clownspiration!</h3>
-  <p>For this lab, I created the very basics of the site (index page), learned about how to push changes to git, and all that beautiful stuff like that. I dedicated some time to finding and sketching inspiration for this site. I LOVE Pierrot, the french clown, and wanted to go for a french circus vibe. I found a poster of "Cirque D'Hiver" (translates to "Winter Circus"), a historical seasonal circus in Paris. Hence the logo and name for this site! I wanted a recurring Pierrot-style character that is just a cameo for me, so I designed a little clown logo with my face. All of this started because of that stupid picture of a clown at his desk on the home page. Sometimes I feel like that when I am doing web dev, so I'm dedicating this to him. Also, I wanted practice making a website with a cohesive vibe and aesthetic, and what better way to do so than by having a theme?</p>
+  <p>For this lab, I created the very basics of the site (index page), learned about how to push changes to git, and all those beautiful things. I spent some time finding and sketching inspiration for this site. I LOVE Pierrot, the french clown, and wanted to go for a french circus vibe. I found a poster of "Cirque D'Hiver" (translates to "Winter Circus"), a historical seasonal circus in Paris. Hence the logo and name for this site! I wanted a recurring Pierrot-style character that is just a cameo for me, so I designed a little clown logo with my face. All of this started because of that stupid picture of a clown at his desk on the home page. Sometimes I feel like that when I am doing web dev, so I'm dedicating this to him. Also, I wanted practice making a website with a cohesive vibe and aesthetic, and what better way to do so than by having a theme?</p>
 </section>
 <section class="lab-images">
   <h2>My References</h2>
-  
+<!-- add some inspo images here -->
 </section>
 
-        <section class="lab-header">
-    <h1>Lab 2</h1>
+<section class="lab-header-gif">
+  <img src="../images/lab_2_tent_v2.gif" alt="Lab 2">
+</section>
     <p class="lab-date">15/January/2026</p>
 </section>
 
@@ -98,6 +99,11 @@
       Finally, I had a lot of fun designing and conceptualizing my clown themed website. I even made a clown gif! Next step: figure out how to create a loading screen, so I can implement the clown gif.
     </p>
   </section>
+
+  <section class="lab-header-gif">
+  <img src="../images/lab_3_tent.gif" alt="Lab 3">
+  
+</section>
   
     </main>
 
