adding to labs + consistency across site

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <nav>
       <div class="logo">
         <a href="index.html">
-        <img src="images/clown logo v3.svg" alt="Home button appears as a small cartoon clown head"/></a>
+        <img src="images/clown logo v4.svg" alt="Home button appears as a small cartoon clown head"/></a>
       </div>
       <ul class="nav-links">
-        <li><a href="pages/about.html">About</a></li>
         <li><a href="pages/labs.html">Labs</a></li>
         <li><a href="pages/tech_experiments.html">Tech Experiments</a></li>
+        <li><a href="pages/about.html">About</a></li>
       </ul>
     </nav>
   </header>
@@ -37,29 +37,33 @@
     <div class="gallery-grid">
       
       <div class="gallery-item">
-        <a href="pages/lab2.html">
+        <a href="pages/labs.html">
           <img src="images/pierrot_1.jpg" alt="Cézanne's painting of two clowns. One is wearing all white, and one is in a parquet-patterned suit.">
           <div class="gallery-overlay">
-            <h3>Lab 2</h3>
-            <p>15/Jan/2026</p>
+            <h3>Labs</h3>
+            <p>Explore the mystery of the circus!</p>
           </div>
         </a>
       </div>
       
       <div class="gallery-item">
-        <img src="images/pierrot_2.jpg" alt="Coming soon">
+        <a href="pages/tech_experiments.html">
+        <img src="images/pierrot_2.jpg" alt="Tech Experiments">
         <div class="gallery-overlay">
-          <h3>Coming Soon</h3>
-          <p>Coming Soon</p>
+          <h3>Tech Experiments</h3>
+          <p>Tour the bewitchery of the circus!</p>
         </div>
+        </a>
       </div>
 
   <div class="gallery-item">
-        <img src="images/pierrot_3.jpg" alt="Coming soon">
+    <a href="pages/about.html">
+      <img src="images/pierrot_3.jpg" alt="Coming soon">
         <div class="gallery-overlay">
-          <h3>Coming Soon</h3>
-          <p>Coming Soon</p>
+          <h3>About</h3>
+          <p>Learn the history of the circus!</p>
         </div>
+      </a>
       </div>
 
   <div class="gallery-item">
