--- a/pages/about.html
+++ b/pages/about.html
@@ -15,20 +15,44 @@
     <nav>
     <div class="logo">
         <a href="../index.html">
-        <img src="../images/clown logo v3.svg" alt="Home button appears as a small cartoon clown head"/></a>
+        <img src="../images/clown logo v4.svg" alt="Home button appears as a small cartoon clown head"/></a>
     </div>
     <ul class="nav-links">
-        <li><a href="about.html"class="active">About</a></li>
         <li><a href="labs.html">Labs</a></li>
         <li><a href="tech_experiments.html">Tech Experiments</a></li>
+        <li><a href="about.html"class="active">About</a></li>
     </ul>
     </nav>
     </header>
     
     <main>
-    <p> Cirque d'Hiver est un siteweb dédié à tout ce qui est fantaisiste. </p> <br>
-        <img src="../images/cirque d'ete.jpg" alt="A vintage french circus poster advertising Cirque d'été, the Summer Circus" />
-        <img src="../images/cirque d'hiver.jpg" alt="A vintage french circus poster advertising Cirque d'Hiver, the Winter Circus"/>
+
+  <section class="lab-title">
+    <h2>About Cirque D'Hiver</h2>
+    <section class="about-section">
+      <p>Cirque d'Hiver is a website created to fulfill the learning goals of MSC2006 (and coincidentally the goals of its creator, Winter Kraemer). This site is an experiment in HTML, CSS, and maybe even JavaScript (but let's not get too crazy).</p> 
+      <br>
+      <p>My main goals for this site:</p>
+      <ul>
+        <li>Learn the basics of CSS, HTML, and JS</li>
+        <li>Create a site with a consistent clown theme (so far so good)</li>
+        <li>Understand linking and site structure to support my own MRP work</li>
+      </ul>
+    </section>
+  </section>
+<br>
+  <section class="lab-title">
+    <h2>Uncertainties</h2>
+    <section class="about-section">
+      <p>The following is a running list of things I don't know how to do yet, but would love to learn about:</p>
+      <ul>
+        <li>How to you enlarge an image on a click?</li>
+        <li>How do you apply the same font, header, and footer into every page without copying and pasting every time?</li>
+      </ul>
+    </section>
+  </section>
+
+
     </main>
     <br>
     
