updated tech experiment page

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,6 +52,10 @@
     </section>
   </section>
 
+  <div class="clown-gif">
+    <img src="../images/transparent_clown.GIF" alt="clown kicking legs back and forth cheekily">
+  </div>
+
 
     </main>
     <br>
