--- a/pages/labs.html
+++ b/pages/labs.html
@@ -141,7 +141,7 @@
   <img src="../images/lab_3_tent.gif" alt="Lab 3">
   </section>
 
-  <div class="lab-title">
+  <div class="lab-gallery-title">
     <h2>Reverse-Engineered Storyboard</h2>
   </div>
   
@@ -170,6 +170,9 @@
     </div>
 </section>
 
+<div class="clown-gif">
+    <img src="../images/transparent_clown.GIF" alt="clown kicking legs back and forth cheekily">
+  </div>
     </main>
 
 <footer>
