--- a/pages/tech_experiments.html
+++ b/pages/tech_experiments.html
@@ -26,9 +26,48 @@
     </header>
 
     <main>
-    <div class="clown-gif">
-        <img src="../images/transparent_clown.GIF" alt="">
+    <section>
+    <div class="lab-title">
+        <h2>Tech Experiments</h2>
     </div>
+    </section>
+
+    <!-- Tech experiment 1 - animated gifs -->
+    <section>
+    <div class="lab-header-gif">
+            <img src="../images/hand_drawn_animations.gif" alt="Hand-drawn animations">
+        </div>
+    <section class="lab-1-entry">
+        <div class="learning-section">
+          <h2>Ideation</h2>
+    <p>While ideating, I sketched a cheeky little clown who was kicking their legs back and forth. I wanted to animate this to add as a decorative element to my site, for a bit more flavour. I took to procreate to trace over the original sketch.</p>  
+        </div>
+       <div class="tech-experiment-pic">
+        <img src="../images/clown_kicking_sketch.jpg" alt="cheeky clown sketch">
+       </div> 
+    </section>
+    <section class="lab-1-entry">
+        <div class="learning-section">
+          <h2>Creation</h2>
+    <p>I used strategies we learned in the 2D animation class last semester to develop a nice easing to the leg kicks. I.e. I created a timechart (more of a space chart but whatever). The blue ticks indicate where the feet will be. After I drew each of those feet in the arc, I duplicated the animation and switched the layering of the legs on each level so it would make sense.</p> 
+    <br>
+    <p>I call that the Peter Leynes Special!</p> 
+        </div>
+       <div class="tech-experiment-pic">
+        <img src="../images/gif_planning.JPG" alt="timechart of leg kicks on clown gif">
+       </div> 
+    </section>
+    <section class="lab-1-entry">
+        <div class="learning-section">
+          <h2>Implementation</h2>
+    <p>Implementation was super easy. All you gotta do is put in an image. Literally that easy. I uploaded a transparent background gif from Procreate and put the pathway into the html and BOOM! clown city!</p> 
+        </div>
+       <div class="tech-experiment-pic">
+        <img src="../images/transparent_clown.GIF" alt="clown kicking legs back and forth cheekily">
+       </div> 
+    </section>
+    </section>
+    
     </main>
 
 <footer>
