added project diary page
also some more attempts at making it responsive, not super successful

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       </div>
       <ul class="nav-links">
         <li><a href="pages/labs.html">Labs</a></li>
-        <li><a href="pages/tech_experiments.html">Tech Experiments</a></li>
+        <li><a href="pages/tech_experiments.html">Experiments</a></li>
+        <li><a href="pages/project_diary.html">Diary</a></li>
         <li><a href="pages/about.html">About</a></li>
       </ul>
     </nav>
@@ -57,21 +58,23 @@
       </div>
 
   <div class="gallery-item">
-    <a href="pages/about.html">
-      <img src="images/pierrot_3.jpg" alt="Coming soon">
+    <a href="pages/project_diary.html">
+      <img src="images/pierrot_3.jpg" alt="Project Diary">
         <div class="gallery-overlay">
-          <h3>About</h3>
-          <p>Learn the history of the circus!</p>
+          <h3>Project Diary</h3>
+          <p>Witness the miseries of the circus!</p>
         </div>
       </a>
       </div>
 
   <div class="gallery-item">
-        <img src="images/pierrot_4.jpg" alt="Coming soon">
+      <a href="pages/about.html">
+        <img src="images/pierrot_4.jpg" alt="About">
         <div class="gallery-overlay">
-          <h3>Coming Soon</h3>
-          <p>Coming Soon</p>
+          <h3>About</h3>
+          <p>Learn the history of the circus!</p>
         </div>
+      </a>
       </div>
 
       
