--- a/pages/labs.html
+++ b/pages/labs.html
@@ -19,7 +19,8 @@
     </div>
     <ul class="nav-links">
         <li><a href="labs.html"class="active">Labs</a></li>
-        <li><a href="tech_experiments.html">Tech Experiments</a></li>
+        <li><a href="tech_experiments.html">Experiments</a></li>
+        <li><a href="project_diary.html">Diary</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
     </nav>
