--- a/pages/tech_experiments.html
+++ b/pages/tech_experiments.html
@@ -19,7 +19,8 @@
     </div>
     <ul class="nav-links">
         <li><a href="labs.html">Labs</a></li>
-        <li><a href="uncertainties.html"class="active">Tech Experiments</a></li>
+        <li><a href="tech_experiments.html"class="active">Experiments</a></li>
+        <li><a href="project_diary.html">Diary</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
     </nav>
